--- a/Kategori/artikel.html
+++ b/Kategori/artikel.html
@@ -485,7 +485,7 @@
 					<li>
 						<a href="https://britannica.com">
 							<div class="isi-footer">
-								<img src="../../Footer/website-icon.svg" class="icon-footer">
+								<img src="../Footer/website-icon.svg" class="icon-footer">
 								<p class=label-foot>Encyclopedia Britannica</p>
 							</div>
 						</a>
