--- a/Registration/Sign Up/SignUp.html
+++ b/Registration/Sign Up/SignUp.html
@@ -17,7 +17,7 @@
         }
 
         body {
-            background: url(Shiny.svg) no-repeat;
+            background: url(shiny.svg) no-repeat;
             background-size: 100vw 120vh;
             background-position: cover;
         }
