--- a/Kategori/artikel.html
+++ b/Kategori/artikel.html
@@ -371,7 +371,7 @@
     </div>
 	<div class="footer">
 		<nav class="nav-back">
-			<img src="../../Footer/arrow-up.png" class="arrow-up">
+			<img src="../Footer/arrow-up.png" class="arrow-up">
 			<a href="#">
 				<span class="back-button">
 					<button class="back">
